src/language/tests/success/callee_save.prez
int f() {
  int a = 0;
  int b = a + 1;
  int c = b + 1;
  int d = c + 1;
  int e = d + 1;
  int f = e + 1;
  int g = f + 1;
  int h = g + 1;
  int i = h + 1;
  int j = i + 1;
  return j;
}


void main() {
  int a = 0;
  int b = a + 1;
  int c = b + 1;
  int d = c + 1;
  int e = d + 1;
  int f = e + 1;
  int g = f + 1;
  int h = g + 1;
  int i = h + 1;
  int j = i + 1;
  print(f());
  print(j);
}
