src/language/tests/error/undef.prez
bool f1() {
  return n;
}

int f2() {
  int a = 4;
  b = a;
  return a;
}

void f3() {
  bool b = g();
  h(b);
}

void badFor() {
  for (int i = 0; i < 20; i++) {
    print(i);
  }
  print(i);
}
